@@ -1,3 +1,12 @@
+Mon Nov 15 11:33:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
+        * connectors/dds4ccm/impl/DataReaderListener_T.h:
+        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
+          Listening was based on whether the user had a PortStatusListener
+          configured (and implemented). Now listening is based on the internal
+          listener.
+
 Mon Nov 15 11:11:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
